# LinuxCodeBackUp

./: .gitignore  bashnLunix.txt  gzTips.txt  rosTips.txt
code/python/: Dh_calc.py
code/python/test/: ml_experiment.py  vis_utils.py
code/python/thesis/: data_analysis.py  data_extraction.py
code/ros2_ws/: frames_2025-05-09_10.29.40.gv
code/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
code/ros2_ws/log/: latest_build
code/ros2_ws/src/b_path_planner_test/: package.xml  setup.py
code/ros2_ws/src/my_launch_nav2bringup_gd/: package.xml  setup.cfg  setup.py
code/ros2_ws/src/nav2_simple_commander_test_pkg/: setup.py
code/ros2_ws/src/nav2_test_pkg/: package.xml  setup.py
code/ros2_ws/src/path_planner_test/: package.xml
code/ros2_ws/src/path_planner_test/launch/: launch.py
code/ros2_ws/src/path_planner_test/path_planner_test/: path_planner_test.py
notes_n_tips/: TurtleBot3.txt  rosBsics.txt
thesis/: data_analysis.py  data_extraction.py
thesis/S1/: data_extraction.py
thesis/S2/: None  data_analysis.py  test_bed.py
thesis/S2/data/: maize_2018_2019_unl_additional_traits.csv  maize_2018_2019_unl_metadata.csv  maize_2018_2019_unl_traits.csv  pca_input_dataframe_HSVI_Traits_sort_by_Conditions.csv  pca_input_dataframe_Hs_Traits_sort_by_Conditions.csv  pca_input_dataframe_Traits_sort_by_Conditions.csv
thesis/S2/data/ML/: model_scores_Feature_HSVI_Traits_predit_Chlorophyll.txt  model_scores_Feature_HSVI_Traits_predit_Nitrogen.txt  model_scores_Feature_HSVI_Traits_predit_Nitrogen_mr_0.3.txt  model_scores_Hs_Traits.txt  (+7 more)
(+57 files in other folders)
