<?xml version="1.0"?>
<package format="3">
  <name>path_planner_test</name>
  <version>0.0.1</version>
  <description>ROS 2 package for computing and following optimal waypoint paths using Nav2 and TSP heuristics.</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python_tsp</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
